# ChangeLog for dev-python/tlslite
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/tlslite/ChangeLog,v 1.11 2009/12/31 16:29:12 fauli Exp $

  31 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  tlslite-0.3.8-r2.ebuild:
  stable x86, bug 287622

  26 Dec 2009; Pacho Ramos <pacho@gentoo.org> tlslite-0.3.8-r2.ebuild:
  amd64 stable, bug 287622

*tlslite-0.3.8-r2 (24 Dec 2009)

  24 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -tlslite-0.3.8-r1.ebuild, +tlslite-0.3.8-r2.ebuild,
  files/tlslite-0.3.8-python25.diff:
  Fix some generator-related exceptions with Python >=2.5 (bug #262900).

  25 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  tlslite-0.3.8-r1.ebuild:
  Set SUPPORT_PYTHON_ABIS. Update dependencies.

  04 Sep 2009; Patrick Lauer <patrick@gentoo.org> -tlslite-0.3.8.ebuild:
  Remove old

*tlslite-0.3.8-r1 (05 Jan 2008)

  05 Jan 2008; Stefan Briesenick <sbriesen@gentoo.org>
  +files/tlslite-0.3.8-python25.diff, +tlslite-0.3.8-r1.ebuild:
  added patch for python 2.5, solving bug #204278.

  10 Dec 2007; Stefan Briesenick <sbriesen@gentoo.org> tlslite-0.3.8.ebuild:
  corrected dependencies, removed ia64 keyword (see bugs #198366 and 199481).

  30 May 2006; Stefan Briesenick <sbriesen@gentoo.org> tlslite-0.3.8.ebuild:
  fixed 'userpriv' problem, see bug #134917.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-tlslite-0.3.8,
  Manifest:
  Fixing SHA256 digest, pass four

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> tlslite-0.3.8.ebuild:
  Mark 0.3.8 ~ia64

*tlslite-0.3.8 (06 Feb 2006)

  06 Feb 2006; Stefan Briesenick <sbriesen@gentoo.org> +metadata.xml,
  +tlslite-0.3.8.ebuild:
  initial commit.
